--- a/contact-us.html
+++ b/contact-us.html
@@ -29,7 +29,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-container-full">
       <div class="navigation-side-plain">
-        <a href="#" class="brand w-nav-brand"><img src="images/logo.jpg" width="291" alt="" class="logo"></a>
+        <a href="#index.html" class="brand w-nav-brand"><img src="images/logo.jpg" width="291" alt="" class="logo"></a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav-link w-nav-link">Home</a>
