--- a/contact-us.html
+++ b/contact-us.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>Contact Us</title>
   <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." name="description">
-  <meta content="Contact Us" property="og:title">
+  <meta content="Sales Genio" property="og:title">
   <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/667201ed50641502e3b9d41a/6672028d0eb70b14129711c5_logo.jpg" property="og:image">
-  <meta content="Contact Us" property="twitter:title">
+  <meta content="images/webclip.png" property="og:image">
+  <meta content="Sales Genio" property="twitter:title">
   <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/667201ed50641502e3b9d41a/6672028d0eb70b14129711c5_logo.jpg" property="twitter:image">
+  <meta content="images/webclip.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
