--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="w-layout-grid hero-grid">
         <div class="hero-block">
-          <h1 class="heading">The Future of Sales: Conversational E-commerce on WhatsApp<br></h1>
+          <h1 class="heading">AI Sales: Conversational E-commerce on WhatsApp<br></h1>
           <p class="paragraph-large">Sales Genio is revolutionizing e-commerce by leading the way in 4th generation technology: &#x27;Conversational, Consultative e-commerce on WhatsApp. Imagine converting over 80% of conversations into sales, 24/7, with the power of AI. Our cutting-edge system can scale effortlessly to handle a million client chats during peak moments, ensuring no sales opportunity is missed.message</p>
           <div class="button-wrap">
             <a href="contact-us.html" class="button w-button">Contact Us</a>
