--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     <div class="container">
       <div class="w-layout-grid hero-grid">
         <div class="hero-block">
-          <h1 class="heading">AI Sales: Chat Shopping on WhatsApp<br></h1>
-          <p class="paragraph-large">Sales Genio is changing online shopping with new technology. We use WhatsApp to chat with customers and help them buy things. Imagine turning over 80% of chats into sales, all day, every day, with AI. Our system can easily handle a million chats during busy times, so you never miss a sale.</p>
+          <h1 class="heading">Are You Missing Out on $1.3 Trillion in Sales on WhatsApp?<br></h1>
+          <p class="paragraph-large">Don't let your business become a relic of the past. SalesGenio AI can propel you to the forefront with AI-driven WhatsApp sales. 
+            Stop being a spectator and start leading.</p>
           <div class="button-wrap">
             <a href="contact-us.html" class="button w-button">Contact Us</a>
             <div class="div-block"><img src="images/arrow-down.svg" alt=""></div>
