--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="div-block"><img src="images/arrow-down.svg" alt=""></div>
           </div>
         </div>
-        <div id="w-node-_2e3316db-cefd-234c-665d-4109540e0d59-e3b9d492" class="hero-image-wrap"><img src="images/8e80f563-e44a-4a76-affd-7b7364bc3ee9.jpg" width="585" sizes="(max-width: 767px) 94vw, 585px" srcset="images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-500.jpg 500w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-800.jpg 800w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-1080.jpg 1080w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9.jpg 1199w" alt="" class="image-3"></div>
+        <!--<div id="w-node-_2e3316db-cefd-234c-665d-4109540e0d59-e3b9d492" class="hero-image-wrap"><img src="images/8e80f563-e44a-4a76-affd-7b7364bc3ee9.jpg" width="585" sizes="(max-width: 767px) 94vw, 585px" srcset="images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-500.jpg 500w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-800.jpg 800w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-1080.jpg 1080w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9.jpg 1199w" alt="" class="image-3"></div>-->
+        <div id="w-node-_2e3316db-cefd-234c-665d-4109540e0d59-e3b9d492" class="hero-image-wrap"><iframe src="https://valueamplifyconsulting-my.sharepoint.com/personal/enoc_valueamplify_com/_layouts/15/embed.aspx?UniqueId=d130a711-cafc-4a62-8a85-4423a61db629&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="0725(1).mp4"></iframe>
       </div>
     </div>
   </div>
