--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <div class="div-block"><img src="images/arrow-down.svg" alt=""></div>
           </div>
         </div>
-        <div id="w-node-_2e3316db-cefd-234c-665d-4109540e0d59-e3b9d492" class="hero-image-wrap"><img src="images/8e80f563-e44a-4a76-affd-7b7364bc3ee9.jpg" width="585" sizes="(max-width: 767px) 94vw, 585px" srcset="images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-500.jpg 500w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-800.jpg 800w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9-p-1080.jpg 1080w, images/8e80f563-e44a-4a76-affd-7b7364bc3ee9.jpg 1199w" alt="" class="image-3"></div>
+        <div id="w-node-_2e3316db-cefd-234c-665d-4109540e0d59-e3b9d492" class="hero-image-wrap">
+          <iframe width="585" height="329" src="https://www.youtube.com/embed/s6oPfaLTKeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>      
       </div>
     </div>
   </div>
