--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           </div>
         </div>
         <div id="w-node-_2e3316db-cefd-234c-665d-4109540e0d59-e3b9d492" class="hero-image-wrap">
-          <iframe width="585" height="329" src="https://www.youtube.com/embed/s6oPfaLTKeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </div>      
+          <iframe width="800" height="450" src="https://www.youtube.com/embed/s6oPfaLTKeM?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>       
       </div>
     </div>
   </div>
