--- a/en.html
+++ b/en.html
@@ -32,9 +32,9 @@
         <a href="#index.html" class="brand w-nav-brand"><img src="images/logo.jpg" width="291" alt="" class="logo"></a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Inicio</a>
-        <a href="about-us-value-amplify.html" class="nav-link w-nav-link">Sobre Nosotros</a>
-        <a href="contact-us.html" class="button-navigation w-button">Contáctanos</a>
+        <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
+        <a href="about-us-value-amplify.html" class="nav-link w-nav-link">About Us</a>
+        <a href="contact-us.html" class="button-navigation w-button">Contact Us</a>
       </nav>
       <div class="mobile-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -45,11 +45,11 @@
     <div class="container">
       <div class="w-layout-grid hero-grid">
         <div class="hero-block">
-          <h1 class="heading">¿Estás perdiendo $1.3 Trillones en ventas por no usar WhatsApp?<br></h1>
-          <p class="paragraph-large">No dejes que tu negocio se convierta en una reliquia del pasado. SalesGenio AI puede impulsarte al frente con ventas a través de WhatsApp impulsadas por IA.  
-            Deja de ser un espectador y comienza a liderar.</p>
+          <h1 class="heading">Are You Missing Out on $1.3 Trillion in Sales on WhatsApp?<br></h1>
+          <p class="paragraph-large">Don't let your business become a relic of the past. SalesGenio AI can propel you to the forefront with AI-driven WhatsApp sales. 
+            Stop being a spectator and start leading.</p>
           <div class="button-wrap">
-            <a href="contact-us.html" class="button w-button">Contáctanos</a>
+            <a href="contact-us.html" class="button w-button">Contact Us</a>
             <div class="div-block"><img src="images/arrow-down.svg" alt=""></div>
           </div>
         </div>
@@ -80,17 +80,17 @@
       <div class="w-layout-grid content-grid">
         <div class="content-image"><img src="images/slide111.png" sizes="94vw" srcset="images/slide111-p-500.png 500w, images/slide111-p-800.png 800w, images/slide111.png 956w" alt=""></div>
         <div class="content">
-          <h1><strong>Datos de tus ventas en WhatsApp</strong></h1>
-          <p>¡No pierdas a tus mejores clientes! Nuestros análisis te muestran quiénes gastan más y cómo hacer que regresen. Obtén informes fáciles de leer sobre el valor de los clientes y sus hábitos de consumo. Impulsa tu negocio enfocándote en los clientes que más importan. ¡Prueba hoy nuestras analíticas para restaurantes y aumenta tus ganancias!</p>
+          <h1><strong>Insights on Your Whatsap Sales</strong></h1>
+          <p>Don’t lose your top customers! Our analytics show you who spends the most and how to keep them coming back. Get easy-to-read reports on customer value and spending habits. Boost your business by focusing on the clients who matter most. Try our restaurant analytics today and grow your profits!</p>
         </div>
       </div>
       <div class="w-layout-grid content-grid">
         <div class="content">
-          <h1><strong>Venta de Valor para tus Representantes de WhatsApp</strong></h1>
-          <p>Para vender valor, necesitamos tener una comprensión clara de lo que es el VALOR: una mejora en el rendimiento empresarial alineada con los Factores Críticos de Éxito de la organización que permite a la organización hacer un uso óptimo de sus recursos con riesgos aceptables.<br>
-            <br><a href="documents/REJ_Enterprise.pdf">Descargar libro</a><br>
-            <a href="https://www.youtube.com/watch?v=SwHSZGd33Tc">Ver la capacitación</a><br>
-            <a href="documents/REJ-Brochure-Value-Amplify.doc">Obtener folleto</a>
+          <h1><strong>Value Selling for your Whatsapp Reps</strong></h1>
+          <p>To sell value, we need to have a clear understanding of what is VALUE?, A business performance improvement aligned with organization Critical Success Factors and that enables organization to make optimal use of its resources with acceptable risks.<br>
+            <br><a href="documents/REJ_Enterprise.pdf">Download book</a><br>
+            <a href="https://www.youtube.com/watch?v=SwHSZGd33Tc">Watch the training</a><br>
+            <a href="documents/REJ-Brochure-Value-Amplify.doc">Get Brochure</a>
           </p>
         </div>
         <div id="w-node-_70597030-760c-2824-e65b-f09bad5d9e8a-e3b9d492" class="content-image"><img src="images/Screenshot-2024-06-18-at-9.36.07-PM.png" width="372" sizes="(max-width: 479px) 94vw, 372px" srcset="images/Screenshot-2024-06-18-at-9.36.07-PM-p-500.png 500w, images/Screenshot-2024-06-18-at-9.36.07-PM-p-800.png 800w, images/Screenshot-2024-06-18-at-9.36.07-PM.png 1078w" alt=""></div>
@@ -98,11 +98,11 @@
       <div class="w-layout-grid content-grid">
         <div class="content-image"><img src="images/9b7e1b03-spark_0.png" width="622" alt=""></div>
         <div class="content">
-          <h1><strong>Análisis de tus datos de WhatsApp</strong></h1>
+          <h1><strong>Insight From your WA Data</strong></h1>
           <p>
             <a href="https://www.linkedin.com/pulse/apache-spark-20-just-released-join-our-workshop-your-mascarella/">Apache Spark</a><br>
             <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvwnndO6OKZNFsQvFQ">Spark 2.0 on Azure Suse</a><br>Machine Learning<br>
-            <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvlgrAwU-h8LJheE2g">IoT</a><br>Analítica de Redes Sociales<a href="https://azure.microsoft.com/en-us/documentation/templates/spark-2.0-on-suse"><br>‍</a>Inteligencia de Negocios para Clientes de Restaurantes<br>Marketing Digital<a href="http://www.iotevolutionexpo.com/east/agenda.aspx?d=2/07/17&amp;t=IoT+Certification+Course"><br>‍</a>Nosotros somos <a href="http://learnanalytics.microsoft.com/home/trainingpartners">MICROSOFT OFFICIAL PARTNER</a>
+            <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvlgrAwU-h8LJheE2g">IoT</a><br>Social Media Analytics<a href="https://azure.microsoft.com/en-us/documentation/templates/spark-2.0-on-suse"><br>‍</a>Restaurant Guests BI<br>Digital Marketing<a href="http://www.iotevolutionexpo.com/east/agenda.aspx?d=2/07/17&amp;t=IoT+Certification+Course"><br>‍</a>We are <a href="http://learnanalytics.microsoft.com/home/trainingpartners">MICROSOFT OFFICIAL PARTNER</a>
           </p>
         </div>
       </div>
@@ -112,18 +112,18 @@
     <div class="container">
       <div class="w-layout-grid footer-grid-03">
         <div class="footer-column">
-          <div class="footer-cta">¿Listo para comenzar?</div>
-          <a href="contact-us.html" class="button w-button">Comenzar</a>
+          <div class="footer-cta">Ready to get started?</div>
+          <a href="contact-us.html" class="button w-button">Get Started</a>
         </div>
         <div class="footer-column">
-          <div class="footer-title">Ayuda</div>
-          <a href="contact-us.html" class="footer-link">Contáctanos</a>
+          <div class="footer-title">Help</div>
+          <a href="contact-us.html" class="footer-link">Contact Us</a>
         </div>
       </div>
       <div class="footer-bottom line-blank">
         <div class="footer-wrapper">
-          <a href="privacy-policy.html" class="footer-link">Política de Privacidad</a>
-          <a href="terms-conditions.html" class="footer-link">Terminos &amp; Condiciones</a>
+          <a href="privacy-policy.html" class="footer-link">Privacy Policy</a>
+          <a href="terms-conditions.html" class="footer-link">Terms &amp; Conditions</a>
         </div>
         <div class="footer-wrapper">
           <a href="https://www.linkedin.com/company/value-amplify-consulting/" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
