Button links change

--- a/en.html
+++ b/en.html
@@ -125,6 +125,7 @@
           <a href="privacy-policy.html" class="footer-link">Privacy Policy</a>
           <a href="terms-conditions.html" class="footer-link">Terms &amp; Conditions</a>
         </div>
+        <a href="index.html" class="button w-button">Español</a>
         <div class="footer-wrapper">
           <a href="https://www.linkedin.com/company/value-amplify-consulting/" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
         </div>
