Fix button spanish

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <a href="privacy-policy.html" class="footer-link">Política de Privacidad</a>
           <a href="terms-conditions.html" class="footer-link">Terminos &amp; Condiciones</a>
         </div>
-        <a href="en.html" class="button w-button">English</a>
+        <div><a href="en.html" class="button w-button">English</a></div>
         <div class="footer-wrapper">
           <a href="https://www.linkedin.com/company/value-amplify-consulting/" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
         </div>
