uodate founders spanish

--- a/about-us-value-amplify.html
+++ b/about-us-value-amplify.html
@@ -32,9 +32,9 @@
         <a href="#" class="brand w-nav-brand"><img src="images/logo.jpg" width="291" alt="" class="logo"></a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link w-nav-link">Home</a>
-        <a href="about-us-value-amplify.html" aria-current="page" class="nav-link w-nav-link w--current">About Us</a>
-        <a href="contact-us.html" class="button-navigation w-button">Contact Us</a>
+        <a href="index.html" class="nav-link w-nav-link">Incio</a>
+        <a href="about-us-value-amplify.html" aria-current="page" class="nav-link w-nav-link w--current">Sobre Nosotros</a>
+        <a href="contact-us.html" class="button-navigation w-button">Contáctanos</a>
       </nav>
       <div class="mobile-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -43,57 +43,21 @@
   </div>
   <div class="content-section">
     <div class="content-section">
-      <h1>Our Team is Glad to Support YOU</h1>
+      <h1>Nuestro Equipo está Encantado de Apoyarte</h1>
       <div class="container">
         <div class="w-layout-grid feature-grid">
           <div class="feature-card"><img src="images/giuseppe.jpg" alt="" class="icon-3d">
             <h3>Giuseppe Mascarella</h3>
-            <h4 class="heading-2"><strong>Consultant, Board Member, Author, Trainer</strong></h4>
-            <p class="paragraph">Architect of Data Science Projects (Apache Spark, Cortana Analytics). Former manager of Microsoft strategy consulting group, now the founder value centric boutique consulting firm. Author of the book, &quot;Rapid Economic Justifications&quot; and the related class &quot;Executive Value Propositions&quot;, he has been considered the industry leader in Value selling and benchmarking.After 17 years at Microsoft, in 2006 Giuseppe left Microsoft because he wanted to expand his business experience beyond the IT world. Because 2006-2009 as president and CEO of VioVi and Obiolla, he led a $30 Mil juice processing company acquisition and turnaround project, launching of a new line of products. Before Giuseppe was a Group Manager at Microsoft where he created and launched the Worldwide Strategy Consulting group, he was part of the marketing strategy team for the launch of 4 versions of Microsoft Office and Windows, the most successful products in the history of software. Microsoft Group Program Manager, Technology Strategy Consulting (MCS, Redmond) he led from gound up the development of the first Microsoft executive level consulting program called ESC (Enterprise Strategy Consultants) .</p>
+            <h4 class="heading-2"><strong>Consultor, Miembro del Consejo, Autor, Entrenador</strong></h4>
+            <p class="paragraph">Co-Fundador, Un experto pionero en inteligencia artificial, con una carrera que comenzó en el IBM AI Lab en 1989 y continuó en Microsoft. En Microsoft, lideró los esfuerzos de Comunicaciones Unificadas y Colaboración (UCC) en Office365, reconociendo el potencial transformador del comercio conversacional ya en 2006.</p>
           </div>
           <div id="w-node-d6175625-1449-2fdb-d0a8-24fed9354432-662500cc" class="feature-card"><img src="images/white-background-designify.png" sizes="(max-width: 479px) 67vw, 200px" srcset="images/white-background-designify-p-500.png 500w, images/white-background-designify.png 600w" alt="" class="icon-3d">
             <h3>Enoc Silva</h3>
-            <h4 class="heading-2"><strong>CEO, Ultramarathon Runner</strong></h4>
-            <p class="paragraph">Specializing in high-tech cloud services, I excel in architecting AI-infused growth strategies, implementing AI-powered cost optimization techniques, and streamlining organizational frameworks for sustainable business growth. With a focus on integrating AI technologies, I drive operational excellence and forge strategic AI partnerships, propelling organizations to the forefront of AI-driven digital innovation. Passionate about harnessing AI&#x27;s full potential to drive impactful change and innovation, I am dedicated to collaborating with industry leaders to maximize AI&#x27;s transformative potential for a globally sustainable future. Recently, I completed a 100-mile race, showcasing the same determination and commitment that I bring to the world of AI-driven innovation. Let&#x27;s connect and explore the boundless opportunities AI holds for our shared technological advancement!</p>
+            <h4 class="heading-2"><strong>CEO, Corredor de Ultramaratón</strong></h4>
+            <p class="paragraph">Especializado en servicios de nube de alta tecnología, me destaco en la creación de estrategias de crecimiento impulsadas por IA, implementando técnicas de optimización de costos basadas en IA y optimizando marcos organizacionales para un crecimiento empresarial sostenible. Con un enfoque en la integración de tecnologías de IA, impulso la excelencia operativa y forjo alianzas estratégicas en IA, llevando a las organizaciones a la vanguardia de la innovación digital impulsada por IA. Apasionado por aprovechar al máximo el potencial de la IA para impulsar el cambio y la innovación, estoy dedicado a colaborar con líderes de la industria para maximizar el potencial transformador de la IA en favor de un futuro globalmente sostenible. Recientemente, completé una carrera de 100 millas, demostrando la misma determinación y compromiso que aporto al mundo de la innovación impulsada por IA. ¡Conectemos y exploremos las infinitas oportunidades que la IA tiene para nuestro avance tecnológico compartido!</p>
           </div>
         </div>
-        <div class="w-layout-grid feature-grid">
-          <div class="feature-card"><img src="images/jacek.jpg" alt="" class="icon-3d">
-            <h3>Jacek Laskowski</h3>
-            <h4 class="heading-2"><strong>Spark Master Trainer</strong></h4>
-            <p class="paragraph">Developer and trainer for Apache Spark, Scala, Hadoop YARN, Apache Kafka, Apache Hive, Apache Mesos, Akka Actors/Stream/HTTP and Docker<br>See the Spark Notes at Mastering Apache Spark<br>Jacek contributions to <a href="https://github.com/apache/spark/commits?author=jaceklaskowski">Apache Spark 2.0<br>‍</a>Speaker at <a href="https://spark-summit.org/east-2016/speakers/jacek-laskowski/">Spark Summit in NYC 2016</a>
-            </p>
-          </div>
-          <div id="w-node-_93e0f665-4364-37cc-3e1d-e03255b33c77-662500cc" class="feature-card"><img src="images/rob.jpg" alt="" class="icon-3d">
-            <h3>Rob Grondi</h3>
-            <h4 class="heading-2"><strong>Data Scientist/Data Wrangling</strong></h4>
-            <p class="paragraph">Big Data and Analytics: Hadoop and HBase, RevolutionR<br>NoSQL world: MongoDB, OrientDB and NEO4J<br>Web applications: ASP.Net (WebForm + MVC)<br>Business Intelligence: Microsoft BI Stack, Tableau, SAP BO 4.0, QlikView</p>
-          </div>
-        </div>
-        <div class="w-layout-grid feature-grid">
-          <div class="feature-card"><img src="images/evan.png" alt="" class="icon-3d">
-            <h3>Evan Oster</h3>
-            <h4 class="heading-2"><strong>R and SAS Master Trainer</strong></h4>
-            <p class="paragraph">Evan is a world-class Customer Analytics and Consumer Insights executive leading the strategic application of information to make value-adding impacts on the business, Marketing, brands, and customer relationships. Evan has mined large behavioral databases for nuggets, insights, and targeted direct marketing programs. He has applied advanced methods and analytical tools including: Customer Lifetime Value, Pareto/NBD, A/B testing, regression, factor, discriminant, segmentation/cluster, canonical correlation, multidimensional scaling, conjoint, hierarchical Bayes, metaphor elicitation, and social media analytics.</p>
-          </div>
-          <div id="w-node-cc437e7e-46b2-5808-4596-07823619bcdc-662500cc" class="feature-card"><img src="images/rick.jpg" alt="" class="icon-3d">
-            <h3>Rick Iaccarino</h3>
-            <h4 class="heading-2"><strong>Senior Data Scientist</strong></h4>
-            <p class="paragraph">Microsoft Professional Data Scientist Certified (MPP)<br>Electric Engineer with 10 years of CRM Analytics experience at IBM<br>R, T-SQL developer<br>Visualizations in MS Power BI, Tableau<br>MS Azure Consultant</p>
-          </div>
-        </div>
-        <div class="w-layout-grid feature-grid">
-          <div class="feature-card"><img src="images/david.jpg" alt="" class="icon-3d">
-            <h3>David Smith</h3>
-            <h4 class="heading-2"><strong>Principal IT Consultant</strong></h4>
-            <p class="paragraph">David focuses on how to accelerate change across people, work place, technical and business capabilities in large organizations. Recently responsible for a global consulting delivery team, David continues to work closely on client engagements with large organizations to ensure they realize value from change. David articulates the strategy and execution of change, drawing on wide experience of business architecture, transformation, change management, business and IT alignment, governance processes, adoption and the early realization of benefit to the business. Specialties: technology transformation, enterprise strategy, collaboration, change, mobile working, unstructured work, social computing, adoption, business process reengineering, business consulting, management consulting practices.</p>
-          </div>
-          <div id="w-node-c2f1ab65-a514-cfc3-afed-3e2b80cb8f57-662500cc" class="feature-card"><img src="images/dinesh.jpg" alt="" class="icon-3d">
-            <h3>Dinesh Kumar</h3>
-            <h4 class="heading-2"><strong>Principal IT Consultant</strong></h4>
-            <p class="paragraph">Creative Engineer in Capability &amp; Technology Business Management + Strategist + Business/Enterprise Architect + Educator</p>
-          </div>
-        </div>
+
       </div>
       <div class="container"></div>
       <div class="container"></div>
