--- a/about-us-value-amplify.html
+++ b/about-us-value-amplify.html
@@ -48,16 +48,52 @@
         <div class="w-layout-grid feature-grid">
           <div class="feature-card"><img src="images/giuseppe.jpg" alt="" class="icon-3d">
             <h3>Giuseppe Mascarella</h3>
-            <h4 class="heading-2"><strong>Consultor, Miembro del Consejo, Autor, Entrenador</strong></h4>
+            <h4 class="heading-2"><strong>Co-founder</strong></h4>
             <p class="paragraph">Co-Fundador, Un experto pionero en inteligencia artificial, con una carrera que comenzó en el IBM AI Lab en 1989 y continuó en Microsoft. En Microsoft, lideró los esfuerzos de Comunicaciones Unificadas y Colaboración (UCC) en Office365, reconociendo el potencial transformador del comercio conversacional ya en 2006.</p>
           </div>
           <div id="w-node-d6175625-1449-2fdb-d0a8-24fed9354432-662500cc" class="feature-card"><img src="images/white-background-designify.png" sizes="(max-width: 479px) 67vw, 200px" srcset="images/white-background-designify-p-500.png 500w, images/white-background-designify.png 600w" alt="" class="icon-3d">
             <h3>Enoc Silva</h3>
-            <h4 class="heading-2"><strong>CEO, Corredor de Ultramaratón</strong></h4>
-            <p class="paragraph">Especializado en servicios de nube de alta tecnología, me destaco en la creación de estrategias de crecimiento impulsadas por IA, implementando técnicas de optimización de costos basadas en IA y optimizando marcos organizacionales para un crecimiento empresarial sostenible. Con un enfoque en la integración de tecnologías de IA, impulso la excelencia operativa y forjo alianzas estratégicas en IA, llevando a las organizaciones a la vanguardia de la innovación digital impulsada por IA. Apasionado por aprovechar al máximo el potencial de la IA para impulsar el cambio y la innovación, estoy dedicado a colaborar con líderes de la industria para maximizar el potencial transformador de la IA en favor de un futuro globalmente sostenible. Recientemente, completé una carrera de 100 millas, demostrando la misma determinación y compromiso que aporto al mundo de la innovación impulsada por IA. ¡Conectemos y exploremos las infinitas oportunidades que la IA tiene para nuestro avance tecnológico compartido!</p>
+            <h4 class="heading-2"><strong>CEO</strong></h4>
+            <p class="paragraph">Especialista en Servicios de Nube y optimización de ventas con IA, experto en desarrollar aplicaciones conversacionales que mejoran la experiencia del cliente y los procesos empresariales. Enfocado en tecnologías de IA y Procesamiento del Lenguaje Natural, impulsa la innovación digital y colabora con líderes para maximizar el impacto de la IA en la sostenibilidad global.</p>
           </div>
         </div>
-
+        <div class="w-layout-grid feature-grid">
+          <div class="feature-card"><img src="images/jacek.jpg" alt="" class="icon-3d">
+            <h3>Jacek Laskowski</h3>
+            <h4 class="heading-2"><strong>Spark Master Trainer</strong></h4>
+            <p class="paragraph">Developer and trainer for Apache Spark, Scala, Hadoop YARN, Apache Kafka, Apache Hive, Apache Mesos, Akka Actors/Stream/HTTP and Docker<br>See the Spark Notes at Mastering Apache Spark<br>Jacek contributions to <a href="https://github.com/apache/spark/commits?author=jaceklaskowski">Apache Spark 2.0<br>‍</a>Speaker at <a href="https://spark-summit.org/east-2016/speakers/jacek-laskowski/">Spark Summit in NYC 2016</a>
+            </p>
+          </div>
+          <div id="w-node-_93e0f665-4364-37cc-3e1d-e03255b33c77-662500cc" class="feature-card"><img src="images/rob.jpg" alt="" class="icon-3d">
+            <h3>Rob Grondi</h3>
+            <h4 class="heading-2"><strong>Data Scientist/Data Wrangling</strong></h4>
+            <p class="paragraph">Big Data and Analytics: Hadoop and HBase, RevolutionR<br>NoSQL world: MongoDB, OrientDB and NEO4J<br>Web applications: ASP.Net (WebForm + MVC)<br>Business Intelligence: Microsoft BI Stack, Tableau, SAP BO 4.0, QlikView</p>
+          </div>
+        </div>
+        <div class="w-layout-grid feature-grid">
+          <div class="feature-card"><img src="images/evan.png" alt="" class="icon-3d">
+            <h3>Evan Oster</h3>
+            <h4 class="heading-2"><strong>R and SAS Master Trainer</strong></h4>
+            <p class="paragraph">Evan is a world-class Customer Analytics and Consumer Insights executive leading the strategic application of information to make value-adding impacts on the business, Marketing, brands, and customer relationships. Evan has mined large behavioral databases for nuggets, insights, and targeted direct marketing programs. He has applied advanced methods and analytical tools including: Customer Lifetime Value, Pareto/NBD, A/B testing, regression, factor, discriminant, segmentation/cluster, canonical correlation, multidimensional scaling, conjoint, hierarchical Bayes, metaphor elicitation, and social media analytics.</p>
+          </div>
+          <div id="w-node-cc437e7e-46b2-5808-4596-07823619bcdc-662500cc" class="feature-card"><img src="images/rick.jpg" alt="" class="icon-3d">
+            <h3>Rick Iaccarino</h3>
+            <h4 class="heading-2"><strong>Senior Data Scientist</strong></h4>
+            <p class="paragraph">Microsoft Professional Data Scientist Certified (MPP)<br>Electric Engineer with 10 years of CRM Analytics experience at IBM<br>R, T-SQL developer<br>Visualizations in MS Power BI, Tableau<br>MS Azure Consultant</p>
+          </div>
+        </div>
+        <div class="w-layout-grid feature-grid">
+          <div class="feature-card"><img src="images/david.jpg" alt="" class="icon-3d">
+            <h3>David Smith</h3>
+            <h4 class="heading-2"><strong>Principal IT Consultant</strong></h4>
+            <p class="paragraph">David focuses on how to accelerate change across people, work place, technical and business capabilities in large organizations. Recently responsible for a global consulting delivery team, David continues to work closely on client engagements with large organizations to ensure they realize value from change. David articulates the strategy and execution of change, drawing on wide experience of business architecture, transformation, change management, business and IT alignment, governance processes, adoption and the early realization of benefit to the business. Specialties: technology transformation, enterprise strategy, collaboration, change, mobile working, unstructured work, social computing, adoption, business process reengineering, business consulting, management consulting practices.</p>
+          </div>
+          <div id="w-node-c2f1ab65-a514-cfc3-afed-3e2b80cb8f57-662500cc" class="feature-card"><img src="images/dinesh.jpg" alt="" class="icon-3d">
+            <h3>Dinesh Kumar</h3>
+            <h4 class="heading-2"><strong>Principal IT Consultant</strong></h4>
+            <p class="paragraph">Creative Engineer in Capability &amp; Technology Business Management + Strategist + Business/Enterprise Architect + Educator</p>
+          </div>
+        </div>
       </div>
       <div class="container"></div>
       <div class="container"></div>
