Fixes an button

--- a/about-us-value-amplify.html
+++ b/about-us-value-amplify.html
@@ -60,38 +60,40 @@
         <div class="w-layout-grid feature-grid">
           <div class="feature-card"><img src="images/jacek.jpg" alt="" class="icon-3d">
             <h3>Jacek Laskowski</h3>
-            <h4 class="heading-2"><strong>Spark Master Trainer</strong></h4>
-            <p class="paragraph">Developer and trainer for Apache Spark, Scala, Hadoop YARN, Apache Kafka, Apache Hive, Apache Mesos, Akka Actors/Stream/HTTP and Docker<br>See the Spark Notes at Mastering Apache Spark<br>Jacek contributions to <a href="https://github.com/apache/spark/commits?author=jaceklaskowski">Apache Spark 2.0<br>‍</a>Speaker at <a href="https://spark-summit.org/east-2016/speakers/jacek-laskowski/">Spark Summit in NYC 2016</a>
+            <h4 class="heading-2"><strong>Entrenador Maestro en Spark</strong></h4>
+            <p class="paragraph">Desarrollador y entrenador en Apache Spark, Scala, Hadoop YARN, Apache Kafka, Apache Hive, Apache Mesos, Akka Actors/Stream/HTTP y Docker<br>Consulta las notas de Spark en Mastering Apache Spark<br>Contribuciones de Jacek a <a href="https://github.com/apache/spark/commits?author=jaceklaskowski">Apache Spark 2.0<br>‍</a>Orador en el <a href="https://spark-summit.org/east-2016/speakers/jacek-laskowski/">Spark Summit in NYC 2016</a>
             </p>
           </div>
           <div id="w-node-_93e0f665-4364-37cc-3e1d-e03255b33c77-662500cc" class="feature-card"><img src="images/rob.jpg" alt="" class="icon-3d">
             <h3>Rob Grondi</h3>
-            <h4 class="heading-2"><strong>Data Scientist/Data Wrangling</strong></h4>
-            <p class="paragraph">Big Data and Analytics: Hadoop and HBase, RevolutionR<br>NoSQL world: MongoDB, OrientDB and NEO4J<br>Web applications: ASP.Net (WebForm + MVC)<br>Business Intelligence: Microsoft BI Stack, Tableau, SAP BO 4.0, QlikView</p>
+            <h4 class="heading-2"><strong>Científico de Datos/Manipulación de Datos</strong></h4>
+            <p class="paragraph">Big Data y Analítica: Hadoop y HBase, RevolutionR<br>Mundo NoSQL: MongoDB, OrientDB y NEO4J<br>Aplicaciones web: ASP.Net (WebForm + MVC)<br>Inteligencia de Negocios: Microsoft BI Stack, Tableau, SAP BO 4.0, QlikView</p>
           </div>
         </div>
         <div class="w-layout-grid feature-grid">
           <div class="feature-card"><img src="images/evan.png" alt="" class="icon-3d">
             <h3>Evan Oster</h3>
-            <h4 class="heading-2"><strong>R and SAS Master Trainer</strong></h4>
-            <p class="paragraph">Evan is a world-class Customer Analytics and Consumer Insights executive leading the strategic application of information to make value-adding impacts on the business, Marketing, brands, and customer relationships. Evan has mined large behavioral databases for nuggets, insights, and targeted direct marketing programs. He has applied advanced methods and analytical tools including: Customer Lifetime Value, Pareto/NBD, A/B testing, regression, factor, discriminant, segmentation/cluster, canonical correlation, multidimensional scaling, conjoint, hierarchical Bayes, metaphor elicitation, and social media analytics.</p>
+            <h4 class="heading-2"><strong>Entrenador Maestro en R y SAS</strong></h4>
+            <p class="paragraph">Evan es un ejecutivo de clase mundial en Análisis de Clientes y Perspectivas del Consumidor, liderando la aplicación estratégica de la información para generar impactos que agregan valor al negocio, el Marketing, las marcas y las relaciones con los clientes. Evan ha extraído información valiosa de grandes bases de datos de comportamiento, obteniendo ideas y programas de marketing directo dirigidos. Ha aplicado métodos avanzados y herramientas analíticas que incluyen: Valor de Vida del Cliente, Pareto/NBD, pruebas A/B, regresión, análisis factorial, discriminante, segmentación/cluster, correlación canónica, escalamiento multidimensional, análisis conjunto, Bayes jerárquico, elicitación de metáforas y análisis de redes sociales.</p>
           </div>
           <div id="w-node-cc437e7e-46b2-5808-4596-07823619bcdc-662500cc" class="feature-card"><img src="images/rick.jpg" alt="" class="icon-3d">
             <h3>Rick Iaccarino</h3>
-            <h4 class="heading-2"><strong>Senior Data Scientist</strong></h4>
-            <p class="paragraph">Microsoft Professional Data Scientist Certified (MPP)<br>Electric Engineer with 10 years of CRM Analytics experience at IBM<br>R, T-SQL developer<br>Visualizations in MS Power BI, Tableau<br>MS Azure Consultant</p>
+            <h4 class="heading-2"><strong>Científico de Datos Senior</strong></h4>
+            <p class="paragraph">Científico de Datos Profesional Certificado por Microsoft (MPP) Ingeniero Eléctrico con 10 años de experiencia en Análisis de CRM en IBM<br>R, T-SQL developer<br>Visualizations in MS Power BI, Tableau<br>MS Azure Consultant</p>
           </div>
         </div>
         <div class="w-layout-grid feature-grid">
           <div class="feature-card"><img src="images/david.jpg" alt="" class="icon-3d">
             <h3>David Smith</h3>
-            <h4 class="heading-2"><strong>Principal IT Consultant</strong></h4>
-            <p class="paragraph">David focuses on how to accelerate change across people, work place, technical and business capabilities in large organizations. Recently responsible for a global consulting delivery team, David continues to work closely on client engagements with large organizations to ensure they realize value from change. David articulates the strategy and execution of change, drawing on wide experience of business architecture, transformation, change management, business and IT alignment, governance processes, adoption and the early realization of benefit to the business. Specialties: technology transformation, enterprise strategy, collaboration, change, mobile working, unstructured work, social computing, adoption, business process reengineering, business consulting, management consulting practices.</p>
+            <h4 class="heading-2"><strong>Consultor Principal de TI</strong></h4>
+            <p class="paragraph">David se enfoca en cómo acelerar el cambio en personas, lugares de trabajo, y capacidades técnicas y comerciales en grandes organizaciones. Recientemente, ha sido responsable de un equipo global de consultoría, y continúa trabajando de cerca en compromisos con clientes en grandes organizaciones para asegurar que obtengan valor del cambio. David articula la estrategia y ejecución del cambio, basándose en su amplia experiencia en arquitectura empresarial, transformación, gestión del cambio, alineación de negocios y TI, procesos de gobernanza, adopción y la realización temprana de beneficios para el negocio. 
+
+              Especialidades: transformación tecnológica, estrategia empresarial, colaboración, cambio, trabajo móvil, trabajo no estructurado, computación social, adopción, reingeniería de procesos empresariales, consultoría empresarial, y prácticas de consultoría de gestión.</p>
           </div>
           <div id="w-node-c2f1ab65-a514-cfc3-afed-3e2b80cb8f57-662500cc" class="feature-card"><img src="images/dinesh.jpg" alt="" class="icon-3d">
             <h3>Dinesh Kumar</h3>
-            <h4 class="heading-2"><strong>Principal IT Consultant</strong></h4>
-            <p class="paragraph">Creative Engineer in Capability &amp; Technology Business Management + Strategist + Business/Enterprise Architect + Educator</p>
+            <h4 class="heading-2"><strong>Consultor Principal de TI</strong></h4>
+            <p class="paragraph">Ingeniero Creativo en Capacidades &amp; Gestión de Negocios Tecnológicos + Estratega + Arquitecto de Negocios/Empresarial + Educador</p>
           </div>
         </div>
       </div>
@@ -103,17 +105,17 @@
     <div class="container">
       <div class="w-layout-grid footer-grid-03">
         <div class="footer-column">
-          <div class="footer-cta">Ready to get started?</div>
-          <a href="contact-us.html" class="button w-button">Get Started</a>
+          <div class="footer-cta">¿Listo para comenzar?</div>
+          <a href="contact-us.html" class="button w-button">Comenzar</a>
         </div>
         <div class="footer-column">
-          <div class="footer-title">Help</div>
-          <a href="contact-us.html" class="footer-link">Contact Us</a>
+          <div class="footer-title">Ayuda</div>
+          <a href="contact-us.html" class="footer-link">Contáctanos</a>
         </div>
       </div>
       <div class="footer-bottom line-blank">
         <div class="footer-wrapper">
-          <a href="privacy-policy.html" class="footer-link">Privacy Policy</a>
+          <a href="privacy-policy.html" class="footer-link">Política de Privacidad</a>
           <a href="terms-conditions.html" class="footer-link">Terms &amp; Conditions</a>
         </div>
         <div class="footer-wrapper">
