--- a/en.html
+++ b/en.html
@@ -35,6 +35,7 @@
         <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
         <a href="about-us-value-amplify.html" class="nav-link w-nav-link">About Us</a>
         <a href="contact-us.html" class="button-navigation w-button">Contact Us</a>
+        <a href="index.html" class="nav-link w-nav-lin">Español</a>
       </nav>
       <div class="mobile-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -130,7 +131,7 @@
           <a href="https://www.linkedin.com/company/value-amplify-consulting/" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
         </div>
       </div>
-      <div><a href="index.html" class="button w-button">Español</a></div>
+      
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=667201ed50641502e3b9d41a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
