--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta content="Sales Genio" property="twitter:title">
   <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="twitter:description">
   <meta content="images/webclip.png" property="twitter:image">
+  <meta name="facebook-domain-verification" content="egorzb0q0r6kq5w8xauxnylx41xtp6" />
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
