--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/landing-valueamplify.webflow.css" rel="stylesheet" type="text/css">
+  <meta name="facebook-domain-verification" content="n7y0eslmndcj1cden009w8xw1t7947" />
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
