--- a/contact-us.html
+++ b/contact-us.html
@@ -69,10 +69,16 @@
           <a href="terms-conditions.html" class="footer-link">Terms &amp; Conditions</a>
         </div>
         <div class="footer-wrapper">
-          <a href="https://www.linkedin.com/company/value-amplify-consulting/" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
+          <a href="https://www.linkedin.com/company/sales-genio-ai" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
         </div>
       </div>
     </div>
+    <p class="footer-link w--current">
+      All Rights Reserved By
+      <a target="_blank" href="https://valueamplify.com/">
+          Value Amplify
+      </a>
+    </p>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=667201ed50641502e3b9d41a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
