--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -45,45 +45,32 @@
     <div class="content-section">
       <h1>Terms &amp; Conditions</h1>
       <div class="w-richtext">
-        <p>Sales Genio is a product developed and offered by Sales Genio. We provide software as a service (SaaS) that enables our clients to store, manipulate, analyze, and transfer messages between their business systems and their customers across a variety of messaging channels provided by Sales Genio and third parties (the &quot;Service&quot;). A &quot;Client&quot; is an entity with whom we have an agreement to provide the Service. This terms of service agreement (the &quot;Agreement&quot;) is a commitment between the Client and Sales Genio, with both parties being the &quot;Parties&quot; and each being a &quot;Party,&quot; and becomes effective on the date the Client registers for an account through our website (the &quot;Effective Date&quot;).</p>
-        <p>By registering for an account, you acknowledge your understanding of these terms and agree to the Agreement on behalf of the Client. Please ensure you have the necessary authority to accept the Agreement on behalf of the Client before proceeding.</p>
-        <p>If a Client violates any of the terms described below, we reserve the right to cancel accounts or deny access to accounts without prior notice. If you do not agree to these terms, please do not use our services. We may, but are not obligated to, remove content and accounts containing content that we determine in our sole discretion to be unlawful, offensive, threatening, defamatory, pornographic, obscene, or otherwise objectionable or that violates any party&#x27;s intellectual property or these terms of use.</p>
-        <p>We may refuse service to anyone for any reason at any time.</p>
-        <p>BY USING ANY PART OF THE Sales Genio SOLUTION (INCLUDING THE WEBSITE), THE CLIENT ACKNOWLEDGES HAVING READ, ACCEPTED, AND AGREED TO BE BOUND BY AND COMPLY WITH THE TERMS AND CONDITIONS SET FORTH IN THIS AGREEMENT, AS AMENDED FROM TIME TO TIME. IF THE CLIENT DOES NOT ACCEPT AND AGREE TO BE BOUND BY THIS AGREEMENT, THE CLIENT MUST NOT USE THE SOLUTION. THE CLIENT REPRESENTS AND WARRANTS TO Sales Genio THAT IT HAS THE CAPACITY TO ENTER INTO THIS LEGALLY BINDING AGREEMENT. IF THE CLIENT IS USING THE SOLUTION ON BEHALF OF ANOTHER PERSON, THE CLIENT REPRESENTS AND WARRANTS TO Sales Genio THAT IT HAS THE AUTHORITY TO BIND SUCH PERSON TO THIS AGREEMENT.</p>
-        <p>We reserve the right to change our monthly/annual fees upon 30 days&#x27; notice. Fee changes will be notified by email to all our subscribers and will be reflected on the pricing page on our website.</p>
-        <p>We reserve the right to update and change the Terms of Service from time to time without notice. Any new features that augment or enhance the current Service, including the release of new tools and resources, shall be subject to the Terms of Service. Continued use of the Service after any such changes shall constitute your consent to such changes.</p>
-        <p>‍</p>
-        <p><strong>Platform Provision by Sales Genio</strong><br>Subject to the Client&#x27;s compliance with the terms and conditions of this Agreement, we will make the platform available to the Client on the terms and conditions set forth in this Agreement, provided that: (i) the Client has read and accepted and complies with its obligations under the applicable terms of use related to all applicable Third Party Messaging Platforms, Pre-Integrated Third Party Business Applications, and Integrated Custom Business Applications; and (ii) has taken all necessary steps to enable interoperability between the platform and all applicable Third Party Messaging Platforms, Pre-Integrated Third Party Business Applications, and Integrated Custom Business Applications, including acquiring necessary approvals and API keys, either directly or through the Client&#x27;s Customers, to access these messaging channels as a business.</p>
-        <p>‍<br><strong>Service and Fee Modifications</strong><br>Sales Genio reserves the right to modify, suspend, or discontinue the Service at any time and for any reason with or without notice.</p>
-        <p>Sales Genio reserves the right to change our monthly/annual fees upon 30 days&#x27; notice. Fee changes will be notified by email to all our subscribers and will be reflected on the pricing page.</p>
-        <p>Sales Genio reserves the right to update and change the Terms of Service from time to time without notice. Any new features that augment or enhance the current Service, including the release of new tools and resources, shall be subject to the Terms of Service. Continued use of the Service after any such changes shall constitute your consent to such changes.</p>
-        <p>‍<br><strong>Trademark License</strong><br>During the Term, the Client grants to Sales Genio a worldwide, non-exclusive, non-transferable, and non-sublicensable (except to affiliates) royalty-free license to use in connection with the marketing, advertising, and promotion of the Solution, including the inclusion of the Client and the Client&#x27;s Application on the Sales Genio website; and only in accordance with the Client&#x27;s reasonable trademark usage guidelines, as updated by the Client from time to time. The Client may require Sales Genio to cease using the Client&#x27;s trademarks and logos if, in the Client&#x27;s reasonable judgment, the continued display of the Client&#x27;s trademarks and logos would materially adversely affect the Client&#x27;s image and commercial value associated with them.</p>
-        <p>‍<br><strong>Copyright and Ownership</strong><br>We expressly reserve all rights, title, and interest, and the Client will not acquire any rights, title, or interest in: (i) the Solution (or any part thereof) and any other material or content provided by Sales Genio under this Agreement, including all and any Modifications to any of the foregoing; and (ii) all intellectual property rights in any of the foregoing, in each case. All rights, title, and interest in the Property shall remain with Sales Genio (or third-party providers, as applicable). The Client may not copy, modify, adapt, reproduce, distribute, reverse engineer, decompile, or disassemble any aspect of the Service that is owned by Sales Genio or its suppliers. The Client agrees not to resell, duplicate, reproduce, or exploit any part of the Service without the express written permission of Sales Genio. For greater certainty, the Property is licensed and not &quot;sold&quot; to the Client.</p>
-        <p>We do not claim any intellectual property rights over the Content that the Client uploads or provides to the Service.</p>
-        <p>‍</p>
-        <p><strong>The right of Sales Genio to use customer data</strong><br>The customer acknowledges and agrees that Sales Genio may store, use, reproduce, modify, and transfer customer data, including personal data, solely in connection with the delivery of services under this agreement. The customer further acknowledges and agrees that Sales Genio may store, use, reproduce, modify, and transfer data that is not related to an identified or identifiable natural person, including aggregated or de-identified data, without limitation, for its internal business purposes, such as analysis, quality assurance, product and service improvement, and development of new products and services. The customer agrees to ensure that any administrative user, customer of the customer, and chat participant accepts the terms.Customer responsibilities<br>‍<br><strong>Customer accounts.</strong><br> At the customer&#x27;s request, Sales Genio will issue one or more administrator accounts (the &quot;Administrator Accounts&quot;) to the customer, which will provide the customer with the ability to create accounts for use by individuals who are employees or contractors of the customer and whom the customer wishes to have access to and use of the Sales Genio platform (each, an &quot;Administrative User&quot;). The customer will ensure that Administrative Users only use the platform through their Customer Account. The customer will not share Administrator Accounts with anyone else and will not allow Administrative Users to share their Customer Account with anyone else. The customer will promptly notify Sales Genio of any actual or suspected unauthorized use of the platform. Sales Genio reserves the right to suspend, disable, or replace any Customer Account or Administrator Account if it determines that the Customer Account or Administrator Account, as applicable, may have been used for an unauthorized purpose.</p>
-        <p>The customer is responsible for maintaining the privacy and security of their accounts. Sales Genio will not be liable for any damage or loss that may result from your failure to protect your login information, including your password.Use restrictions. The customer acknowledges and agrees that they are responsible for the activities and communications of all administrative users and chat participants on the Sales Genio platform, and the compliance by all administrative users, customer of the customer, and chat participants with this agreement, and any guidelines and policies published by Sales Genio from time to time.</p>
-        <p>The customer is fully responsible for all activities that occur under their account and for any other action taken in connection with the account. You are responsible for all content submitted and activity that occurs under your account (even when the content is submitted by others to your account).</p>
-        <p>Sales Genio may, but is not obligated to, delete content and accounts that contain content that we determine in our sole discretion to be illegal, offensive, threatening, defamatory, pornographic, obscene, or otherwise objectionable or that violates the intellectual property rights of any party or these Terms of Use.</p>
-        <p>‍</p>
-        <p>Without limiting the generality of the foregoing, the customer shall not and shall not permit any other person (including administrative users, customers of the customer, or chat participants) to do the following:</p>
-        <ul role="list">
-          <li>Use the Sales Genio platform to send, upload, collect, transmit, store, use, disclose, or process, or request Sales Genio to obtain from third parties or perform any of the foregoing with respect to any customer data that:</li>
-          <li>Contains computer viruses, worms, malicious code, or any software intended to damage or alter a computer system or data.</li>
-          <li>The customer or the corresponding administrative user, customer of the customer, or chat participant does not have the legal right to send, upload, collect, transmit, store, use, disclose, process, copy, transmit, distribute, and display.</li>
-          <li>Is false, intentionally misleading, or impersonates any other person.</li>
-          <li>Is threatening, harassing, abusive, menacing, vulgar, obscene, or offensive, or that contains pornography, nudity, graphic or gratuitous violence, or that promotes violence, racism, discrimination, intolerance, or physical harm of any kind against any group or individual.</li>
-          <li>Is harmful to minors in any way or targeted at individuals under 16 years of age.</li>
-          <li>Violates any applicable law, or infringes, violates, or otherwise misappropriates the intellectual property rights or other rights of any third party (including moral rights, privacy, or publicity rights).</li>
-          <li>Encourages any conduct that could violate any applicable law or that could give rise to civil or criminal liability.</li>
-          <li>Disable, overload, hinder, or otherwise interfere with the servers or networks connected to the Sales Genio platform (e.g., a denial-of-service attack).</li>
-          <li>Attempt to gain unauthorized access to the Sales Genio platform.</li>
-          <li>Use any data mining methods, robots, or other similar data collection or extraction methods, or copy, modify, decompile, disassemble, or decode the Sales Genio solution or any part of it, or otherwise attempt to discover any source code, except as expressly provided in this Agreement.</li>
-          <li>Use the Sales Genio solution for the purpose of building a similar or competitive product or service.</li>
-          <li>Use the Sales Genio solution in any way not permitted by this Agreement.</li>
+        <p>Certainly, here’s a basic template for a privacy policy page for Value Amplify producer of Sales Genio AI. Remember, it’s important to have a legal professional review any privacy policy to ensure it complies with all applicable laws and regulations, including those specific to your region and industry.</p>
+        <p>Welcome to Value Amplify producer of Sales Genio AI!</p>
+        <p>These terms and conditions outline the rules and regulations for the use of Value Amplify producer of Sales Genio AI’ Website, located at salesgenio.ai.</p>
+        <p>By accessing this website, we assume you accept these terms and conditions. Do not continue to use Value Amplify producer of Sales Genio AI if you do not agree to take all of the terms and conditions stated on this page.</p>
+        
+        <h3>License</h3>
+        <p>Unless otherwise stated, Value Amplify producer of Sales Genio AI and/or its licensors own the intellectual property rights for all material on Value Amplify producer of Sales Genio AI. All intellectual property rights are reserved. You may access this from Value Amplify producer of Sales Genio AI for your own personal use subjected to restrictions set in these terms and conditions.</p>
+
+        <h3>User Engagement</h3>
+        <ul>
+          <li>Republish material from Value Amplify producer of Sales Genio AI</li>
+          <li>Sell, rent, or sub-license material from Value Amplify producer of Sales Genio AI</li>
+          <li>Reproduce, duplicate, or copy material from Value Amplify producer of Sales Genio AI</li>
+          <li>Redistribute content from Value Amplify producer of Sales Genio AI</li>
         </ul>
-        <p>‍</p>
-        <p>‍</p>
+        <p>This Agreement shall begin on the date hereof.</p>
+
+        <h3>Parts of this Website Offer an Opportunity for Users to Post and Exchange Opinions and Information</h3>
+        <p>Value Amplify producer of Sales Genio AI does not filter, edit, publish, or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of Value Amplify producer of Sales Genio AI, its agents, and/or affiliates. Comments reflect the views and opinions of the person who posts their views and opinions. To the extent permitted by applicable laws, Value Amplify producer of Sales Genio AI shall not be liable for the Comments or for any liability, damages, or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</p>
+        <p>Value Amplify producer of Sales Genio AI reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive, or causes breach of these Terms and Conditions.</p>
+
+        <h3>Disclaimer</h3>
+        <p>The information provided by Value Amplify producer of Sales Genio AI on salesgenio.ai is for general informational purposes only. All information on the site is provided in good faith, however, we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
+
+        <h3>Governing Law & Jurisdiction</h3>
+        <p>These Terms will be governed by and interpreted in accordance with the laws of the State of Puerto Rico, United States. You submit to the non-exclusive jurisdiction of the state and federal courts located in Río grande, PR for the resolution of any disputes.</p>
       </div>
     </div>
   </div>
@@ -105,10 +92,16 @@
           <a href="terms-conditions.html" aria-current="page" class="footer-link w--current">Terms &amp; Conditions</a>
         </div>
         <div class="footer-wrapper">
-          <a href="https://www.linkedin.com/company/value-amplify-consulting/" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
+          <a href="https://www.linkedin.com/company/sales-genio-ai" class="social-link w-inline-block"><img src="images/linkedin.png" sizes="35px" srcset="images/linkedin-p-500.png 500w, images/linkedin.png 512w" alt=""></a>
         </div>
       </div>
     </div>
+    <p class="footer-link w--current">
+      All Rights Reserved By
+      <a target="_blank" href="https://valueamplify.com/">
+          Value Amplify
+      </a>
+    </p>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=667201ed50641502e3b9d41a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
